# desaster

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  autogen.sh  environ
desaster/: Buffer.cpp  Buffer.h  BufferRef.h  CLI.cpp  CLI.h  CMakeLists.txt  ClusterAdapter.cpp  ClusterAdapter.h  Connection.cpp  Connection.h  Job.cpp  Job.h  Logging.cpp  Logging.h  Module.cpp  Module.h  NetMessage.cpp  NetMessage.h  NetworkAdapter.cpp  NetworkAdapter.h  Pipe.cpp  Pipe.h  Queue.cpp  Queue.h  Server.cpp  Server.h  TODO.markdown  Worker.cpp  Worker.h  config.h.cmake  main.cpp  qdisc.cpp  qdisc.h
desaster-cli/: CMakeLists.txt  main.cpp
desaster-scheduler/: CMakeLists.txt  desaster-scheduler.cpp
desaster-worker/: CMakeLists.txt
desaster/ruby/: wrapper.rb
desaster/shell/: ShellJob.cpp  ShellJob.h  ShellModule.h  ShellWorker.cpp  ShellWorker.h
desasterd/: CMakeLists.txt  desasterd.cpp
lib/: CMakeLists.txt
playground/: CMakeLists.txt  iterate-network-interfaces.cpp  qdisc-test.cpp  t.cpp  udp-broadcaster.cpp  udp-receiver.cpp  zmq1.cpp
